--- a/index.html
+++ b/index.html
@@ -15,28 +15,42 @@
 </head>
 <body>
 
+<header>
 
   Scoopalicious
 
-  Flavours
-  Locations
-  Shop online
+  <section id="nav">
+    <nav>
+      <ul>
+        Flavours
+        Locations
+        Shop online
+      </ul>
+    </nav>
+  </section>
+</header>
+
+<!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
+<main>
+  <img src="./images/ice-cream-cones.jpg" alt="big-cones">
+  <h1>
+    Scoopalicious
+  </h1>
 
 
-  <!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
-  Scoopalicious
+  <h2>
+    Welcome to Scoopalicious!
+  </h2>
 
+  <p>
+    Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!
+  </p>
 
+  <h3>
+   Top 5 Fan Favourites
+  </h3>
 
-
-  Welcome to Scoopalicious!
-
-  Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!
-
-
-
-  Top 5 Fan Favourites
-
+  
   Choco-Obsession
   
   A rich, velvety dark chocolate ice cream made from a blend of organic cocoa and creamy coconut cream.
@@ -91,12 +105,13 @@
   <!-- Display the image: elijah-taylor.jpg -->
   Elijah Taylor
   Flavour Innovator
+</main>
 
 
 
-
+<footer>
   All rights reserved © 2023 Scoopalicious
-
+</footer>
 
   
 </body>
