--- a/index.html
+++ b/index.html
@@ -41,44 +41,43 @@
   <h2>
     Welcome to Scoopalicious!
   </h2>
-
-  <p>
-    Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!
-  </p>
+    <p>Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!</p>
 
   <h3>
    Top 5 Fan Favourites
   </h3>
 
-  
-  Choco-Obsession
-  
-  A rich, velvety dark chocolate ice cream made from a blend of organic cocoa and creamy coconut cream.
+  <section id="faves">  
+    <dt>
+      Choco-Obsession
+    </dt>
+      <dd>A rich, velvety dark chocolate ice cream made from a blend of organic cocoa and creamy coconut cream.</dd>
 
 
-
-  Very Berry Blast
-  
-  A harmonious explosion of raspberry, blackberry, and blueberry swirls in a smooth almond base.
-
-
-
-  Cookie Crumble Craze
-  
-  Scrummy cookie crumbles meet the creaminess of cashew-based vanilla ice cream.
+    <dt>
+      Very Berry Blast
+    </dt>
+      <dd>A harmonious explosion of raspberry, blackberry, and blueberry swirls in a smooth almond base.</dd>
 
 
+    <dt>
+      Cookie Crumble Craze
+    </dt>
+      <dd>cookie crumbles meet the creaminess of cashew-based vanilla ice cream.</dd>
 
-  Peanut Butter Paradise
-  
-  Luscious peanut butter ribbons swirled throughout a silky oat milk ice cream.
+
+    <dt>
+      Peanut Butter Paradise
+    </dt>
+      <dd>Luscious peanut butter ribbons swirled throughout a silky oat milk ice cream.</dd>
 
 
+    <dt>
+      Mango Tango Sorbet
+    </dt>
+      <dd>A zesty dance of mango and lime, perfect for a refreshing treat on a hot summer day.</dd>
 
-  Mango Tango Sorbet
-  
-  A zesty dance of mango and lime, perfect for a refreshing treat on a hot summer day.
-
+  </section>
 
 
   Meet Our Team
