--- a/index.html
+++ b/index.html
@@ -79,31 +79,43 @@
 
   </section>
 
-
-  Meet Our Team
-
-  We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.
+  <h2>
+    Meet Our Team
+  </h2>
+    <p>We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.</p>
 
   
   
   <!-- Display the image: sophia-lee.jpg -->
-  Sophia Lee
-  Founder & Flavour Guru
+  <img src="./images/sophia-lee.jpg" alt="sophia">
+  <h4>
+    Sophia Lee
+  </h4>
+    <p>Founder & Flavour Guru</p>
 
 
   <!-- Display the image: henry-chen.jpg -->
-  Henry Chen
-  Master Scooper
+  <img src="./images/henry-chen.jpg" alt="henry">
+  <h4>
+    Henry Chen
+  </h4>
+    <p>Master Scooper</p>
 
   
   <!-- Display the image: olivia-parks.jpg -->
-  Olivia Parks
-  Vegan Dessert Chef
+  <img src="./images/olivia-parks.jpg" alt="olivia">
+  <h4>
+    Olivia Parks
+  </h4>
+    <p>Vegan Dessert Chef</p>
 
   
   <!-- Display the image: elijah-taylor.jpg -->
-  Elijah Taylor
-  Flavour Innovator
+  <img src="./images/elijah-taylor.jpg" alt="elijah">
+  <h4>
+    Elijah Taylor
+  </h4>
+    <p>Flavour Innovator</p>
 </main>
 
 
