--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <section id="nav">
     <nav>
       <ul>
-        Flavours
-        Locations
-        Shop online
+        <li>Flavours</li>
+        <li>Locations</li>
+        <li>Shop online</li>
       </ul>
     </nav>
   </section>
