--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <header>
 
-  Scoopalicious
+  <title>Scoopalicious</title>
 
   <section id="nav">
     <nav>
@@ -29,6 +29,8 @@
     </nav>
   </section>
 </header>
+
+
 
 <!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
 <main>
@@ -42,6 +44,8 @@
     Welcome to Scoopalicious!
   </h2>
     <p>Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!</p>
+
+
 
   <h3>
    Top 5 Fan Favourites
@@ -79,13 +83,13 @@
 
   </section>
 
+
+
   <h4>
     Meet Our Team
   </h4>
     <p>We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.</p>
 
-  
-  
   <!-- Display the image: sophia-lee.jpg -->
   <img src="./images/sophia-lee.jpg" alt="sophia">
   <h5>
