--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 <header>
 
-  <title>Scoopalicious</title>
-
+  <p>Scoopalicious</p>
   <section id="nav">
     <nav>
       <ul>
@@ -33,7 +32,7 @@
 
 
 <!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
-<main>
+<main class="wrapper">
   <img src="./images/ice-cream-cones.jpg" alt="big-cones">
   <h1>
     Scoopalicious
