--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <main class="wrapper">
 
-<header>
+<header role="banner" class="header">
   <p>Scoopalicious</p>
   <section id="nav">
     <nav>
